Remove references to scalacheck - scalacheck is not used but listed as a dependency - gets regular updates pr's from scala steward